# Mosaic-Test

./: CMakeLists.txt  build-debug.sh  logs.txt
include/: log_severities.hpp  quad_mesh.hpp
scripts/: build-debug.sh  build-release.sh
source/: main.cpp
